--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "create-uniapp-pages-json",
   "version": "1.0.5",
   "description": "Dynamic generation of uniapp pages.json",
-  "main": "src/index.js",
+  "main": "index.js",
   "repository": "https://github.com/xh-shen/create-uniapp-pages-json.git",
   "bin": {
-    "create-uniapp-pages-json": "./src/commands/create.js",
-    "pages-config-json-init": "./src/commands/createJson.js"
+    "create-uniapp-pages-json": "./commands/create.js",
+    "pages-config-json-init": "./commands/createJson.js"
   },
   "keywords": [
+    "uni-app",
     "uniapp",
     "pages.json"
   ],
@@ -18,6 +19,12 @@
     "chalk": "^4.1.0",
     "colors": "^1.4.0",
     "figlet": "^1.5.0",
-    "ora": "^5.1.0"
+    "ora": "^5.1.0",
+    "tslib": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.16",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
